--- a/CommunityKitchen/Views/Shared/_Layout.cshtml
+++ b/CommunityKitchen/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="~/Assets/css/signuplogin.css" rel="stylesheet" />
     <link href="~/Assets/css/style.css" rel="stylesheet" />
     <link href="~/Assets/css/responsive.css" rel="stylesheet" />
     <link href="~/Assets/css/flaticon.css" rel="stylesheet" />
@@ -45,7 +46,7 @@
                     <div class="row">
                         @Html.Partial("~/Views/Shared/Components/_LogoMain.cshtml")
                         @Html.Partial("~/Views/Shared/Components/_NavBar.cshtml")
-                        @Html.Partial("~/Views/Shared/Components/_SearchBar.cshtml")
+                        @*@Html.Partial("~/Views/Shared/Components/_SearchBar.cshtml")*@
                     </div>
                 </div> <!-- End of .conatiner -->
             </section>
