ligo contoller kai view sta events

--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -23,7 +23,7 @@
                             <li>@Html.ActionLink("Archive", "ArchivedEvents", "Event")</li>
                             <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
                             <li>@Html.ActionLink("Support A Cause", "SupportCause", "Support")</li>
-                            <li>@Html.ActionLink("Upcoming Events", "UpcomingEvents", "Event")</li>
+                            <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
