--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="section-title">
             <h5>going to raise humanity</h5>
-            <h1>upcoming <span>event</span></h1>
+            <h1>organize <span>event</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
         </div>
 
