--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -30,7 +30,7 @@
                         @Html.ActionLink("Organizer", "InventoryIndex", "Inventory")
                         <ul>
                             <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
-                            <li>@Html.ActionLink("Organise Event", "OrganizeEvents", "Event")</li>
+                            <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
                             <li>@Html.ActionLink("Create a Cause", "CreateCause", "Support")</li>
                         </ul>
                     </li>
@@ -57,7 +57,7 @@
                     @Html.ActionLink("Organizer", "InventoryIndex", "Inventory")
                     <ul>
                         <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
-                        <li>@Html.ActionLink("Organise Event", "OrganizeEvents", "Event")</li>
+                        <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
                         <li>@Html.ActionLink("Create a Cause", "CreateCause", "Support")</li>
                     </ul>
                 </li>
