--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "EventsIndex";
 }
 
-<h2>View KAI KALALALALA</h2>
+<h1 style="text-align:center">Event Index</h1>
 
 
 <section class="page-banner">
