--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -30,7 +30,7 @@
                         @Html.ActionLink("Organizer", "InventoryIndex", "Inventory")
                         <ul>
                             <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
-                            <li>@Html.ActionLink("Organise Event", "CreateEvent", "Event")</li>
+                            <li>@Html.ActionLink("EventsIndexOrganizer", "EventsIndexOrganizer", "Event")</li>
                             <li>@Html.ActionLink("Create a Cause", "CreateCause", "Support")</li>
                         </ul>
                     </li>
