--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -14,14 +14,17 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
         </div>
 
-
+        <div>
+            <button class="thm-btn style-1">Create Event </button>
+            <br />
+            <br />
+            <br />
+        </div>
         <div class="item-list">
             <div class="item wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
                 <div class="bg-area">
 
-                    <div>
-                        <button type="button" style="background-color:crimson"> Create an Event </button>
-                    </div>
+
                     @foreach (var eve in Model)
                     {
 
@@ -31,8 +34,7 @@
                             <ul class="event-info">
                                 <li><span class="fa fa-calendar"></span> @eve.EventDate.ToLongDateString()</li>
                                 <li> &emsp; <span class="fa fa-map-marker"></span>@eve.Address</li>
-                                <li>  <button type="button" style="background-color:crimson">Edit Event</button></li>
-                                <li>  <button type="button" style="background-color:crimson">Delete Event</button></li>
+                                <li class="link"><a href="#" onclick="loginToggle()" class="thm-btn style-2">Edit Event</a><a href="#" class="thm-btn style-2">Delete  Event</a></li>
                             </ul>
 
                             <div class="text">
