--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -31,6 +31,7 @@
                         <div class="content-box">
 
                             <h3>Titlosss</h3>
+                            <h3>Titlosss2</h3>
                             <h3>@eve.Title</h3>
                             <ul class="event-info">
                                 <li><span class="fa fa-calendar"></span> @eve.EventDate.ToLongDateString()</li>
