--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -15,7 +15,7 @@
         </div>
 
         <div>
-            <button class="thm-btn style-1">Create Event </button>
+            <button class="thm-btn style-1">    Create An Event    </button>
             <br />
             <br />
             <br />
