--- a/CommunityKitchen/Assets/css/font-awesome.css
+++ b/CommunityKitchen/Assets/css/font-awesome.css
@@ -12,6 +12,8 @@
   font-style: normal;
 }
 .fa {
+    margin:8px;
+    color:red;
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
