--- a/CommunityKitchen/Views/Shared/Components/_SearchBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_SearchBar.cshtml
@@ -7,11 +7,11 @@
     <div class="right-area">
         <div class="nav_side_content">
             <div class="search_option">
-                <button class="search tran3s dropdown-toggle color1_bg" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
-                <form action="#" class="dropdown-menu" aria-labelledby="searchDropdown">
-                    <input type="text" placeholder="Search...">
-                    <button><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
+                <div id="log1" class="login-info">
+                    <div id="log"><a onclick="loginToggle()" id="logi" href="#"><i class="icon fa fa-arrow-circle-down"></i>login</a></div>
+                    <div id="log"><a onclick="signupToggle()" id="logi" href="#"><i class="icon fa fa-user"></i>signup</a></div>
+                </div>
+
             </div>
         </div>
     </div>
