Changes Repository---No Factory Final

--- a/CommunityKitchen/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/CommunityKitchen/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ExternalLoginConfirmationViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
