--- a/CommunityKitchen/Views/Account/ForgotPassword.cshtml
+++ b/CommunityKitchen/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ForgotPasswordViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
