--- a/CommunityKitchen/Views/Account/Login.cshtml
+++ b/CommunityKitchen/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using CommunityKitchen.Models
+﻿@using Entities.IdentityModel.AccountViewModel
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
