--- a/CommunityKitchen/Views/Account/Register.cshtml
+++ b/CommunityKitchen/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.RegisterViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
