--- a/CommunityKitchen/Views/Account/ResetPassword.cshtml
+++ b/CommunityKitchen/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ResetPasswordViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
