--- a/CommunityKitchen/Views/Account/SendCode.cshtml
+++ b/CommunityKitchen/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.SendCodeViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
