--- a/CommunityKitchen/Views/Account/VerifyCode.cshtml
+++ b/CommunityKitchen/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.VerifyCodeViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
