--- a/CommunityKitchen/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/CommunityKitchen/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ExternalLoginListViewModel
+﻿@model Entities.IdentityModel.AccountViewModel.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
