--- a/CommunityKitchen/Views/Manage/AddPhoneNumber.cshtml
+++ b/CommunityKitchen/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.AddPhoneNumberViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
