--- a/CommunityKitchen/Views/Manage/ChangePassword.cshtml
+++ b/CommunityKitchen/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ChangePasswordViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
