--- a/CommunityKitchen/Views/Manage/Index.cshtml
+++ b/CommunityKitchen/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.IndexViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
