--- a/CommunityKitchen/Views/Manage/ManageLogins.cshtml
+++ b/CommunityKitchen/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.ManageLoginsViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
