--- a/CommunityKitchen/Views/Manage/SetPassword.cshtml
+++ b/CommunityKitchen/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.SetPasswordViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
