--- a/CommunityKitchen/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/CommunityKitchen/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model CommunityKitchen.Models.VerifyPhoneNumberViewModel
+﻿@model Entities.IdentityModel.ManageViewModel.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
