--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -31,7 +31,7 @@
                         <ul>
                             <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
                             <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
-                            <li>@Html.ActionLink("Create a Cause", "CreateCause", "Support")</li>
+                            <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -58,7 +58,7 @@
                     <ul>
                         <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
                         <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
-                        <li>@Html.ActionLink("Create a Cause", "CreateCause", "Support")</li>
+                        <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
                     </ul>
                 </li>
                 <li class="dropdown">
