--- a/CommunityKitchen/Views/Shared/_Layout.cshtml
+++ b/CommunityKitchen/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                 <!--</div>
             </header>-->
             <section class="theme_menu stricky" style="background-color:#333;  background-repeat: no-repeat; background-size:cover; ">
-                <div id="status" class="column center"></div>
+                @*<div id="status" class="column center"></div>*@
                 <div class="container">
                     <div class="row">
                         @Html.Partial("~/Views/Shared/Components/_LogoMain.cshtml")
