Add CausesIndex & CauseEdit

--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -1,4 +1,10 @@
-﻿
+﻿@model IEnumerable<Entities.Cause>
+
+@{
+    ViewBag.Title = "CauseDetails";
+}
+
+
 <section class="page-banner">
     <div class="container">
         <div class="title">
